--- a/Factory/Views/Engineers/Details.cshtml
+++ b/Factory/Views/Engineers/Details.cshtml
@@ -4,3 +4,20 @@
 
 <h1>Details for @Model.Name</h1>
 
+<h3>Licenses: </h3>
+
+<ul>
+@foreach (EngineerLicense el in Model.EngineerLicenses)
+{
+    <li>@el.License.Name</li>
+}
+</ul>
+
+<h3>Qualified Machines</h3>
+
+<ul>
+@foreach (Machine machine in Model.Machines)
+{
+    <li>@machine.Make @machine.Model</li>
+}
+</ul>
