MachinesController Index and Details route, need to build views

--- a/Factory/Views/Engineers/Details.cshtml
+++ b/Factory/Views/Engineers/Details.cshtml
@@ -23,7 +23,9 @@
     <ul>
         @foreach (Machine machine in Model.Machines)
         {
-            <li>@machine.Make @machine.Model</li>
+            <li>
+                <a href="/machines/details/machin.MachineId">@machine.Make @machine.Model</a>
+            </li>
         }
     </ul>
 }
