Machine Detail page lists qualified engineers

--- a/Factory/Views/Shared/_Layout.cshtml
+++ b/Factory/Views/Shared/_Layout.cshtml
@@ -23,16 +23,16 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Engineers" asp-action="Index">List</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Engineers" asp-action="Index">Engineers</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Engineers" asp-action="Details" asp-route-id="1">Details</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Engineers" asp-action="Create">New</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Engineers" asp-action="Create">New Engineer</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Engineers" asp-action="Edit" asp-route-id="1">Edit</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Machines" asp-action="Index">Machines</a>
                         </li>
                     </ul>
                 </div>
