--- a/Factory/Views/Engineers/Details.cshtml
+++ b/Factory/Views/Engineers/Details.cshtml
@@ -18,13 +18,14 @@
 @if (Model.Machines.Count == 0)
 {
     <p>None</p>
-} else
+} 
+else
 {
     <ul>
         @foreach (Machine machine in Model.Machines)
         {
             <li>
-                <a href="/machines/details/machin.MachineId">@machine.Make @machine.Model</a>
+                <a href="/machines/details/@machine.MachineId">@machine.Make @machine.Model</a>
             </li>
         }
     </ul>
