added country make and model to machine details

--- a/Factory/Views/Machines/Details.cshtml
+++ b/Factory/Views/Machines/Details.cshtml
@@ -2,7 +2,9 @@
     ViewData["Title"] = $"{@Model.Make} {@Model.Model} Details";
 }
 
-<h1>Details for @Model.Make @Model.Make</h1>
+<h2>Country: @Model.Country</h2>
+<h2>Make: @Model.Make</h2>
+<h2>Model: @Model.Model</h2>
 
 <h3>Required licenses: </h3>
 
