--- a/Factory/Views/Engineers/Form.cshtml
+++ b/Factory/Views/Engineers/Form.cshtml
@@ -22,6 +22,20 @@
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
 
+    @* Licenses *@
+    <div class="form-group">
+        <label class="control-label">Licenses: </label>
+        @foreach (var license in ViewBag.Licenses)
+        {
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" name="selectedLicenses" value="@license.LicenseId" 
+                    checked="@license.IsSelected" />
+                <label class="form-check-label">@license.Name</label>
+            </div>
+        }
+        <span asp-validation-for="EngineerLicenses" class="text-danger"></span>
+    </div>
+
     <div class="form-group">
         <input type="submit" value="@ViewData["SubmitButton"]" class="btn btn-primary" />
     </div>
