--- a/Factory/Views/Engineers/Form.cshtml
+++ b/Factory/Views/Engineers/Form.cshtml
@@ -28,12 +28,11 @@
         @foreach (var license in ViewBag.Licenses)
         {
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="selectedLicenses" value="@license.LicenseId" 
+                <input class="form-check-input" type="checkbox" name="selectedLicenseIds" value="@license.LicenseId" 
                     checked="@license.IsSelected" />
                 <label class="form-check-label">@license.Name</label>
             </div>
         }
-        <span asp-validation-for="EngineerLicenses" class="text-danger"></span>
     </div>
 
     <div class="form-group">
@@ -41,4 +40,4 @@
     </div>
 </form>
 
-<p>@Html.ValidationSummary(true, "", new { @class="text-danger" })</p>
+<p>@Html.ValidationSummary(false, "", new { @class="text-danger" })</p>
