--- a/Factory/Views/Shared/_Layout.cshtml
+++ b/Factory/Views/Shared/_Layout.cshtml
@@ -29,10 +29,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Engineers" asp-action="Create">New Engineer</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Engineers" asp-action="Edit" asp-route-id="1">Edit</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Machines" asp-action="Index">Machines</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Machines" asp-action="Index">Machines</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Machines" asp-action="Create">New Machine</a>
                         </li>
                     </ul>
                 </div>
