added navigation for machine form and details

--- a/Factory/Views/Machines/Details.cshtml
+++ b/Factory/Views/Machines/Details.cshtml
@@ -3,8 +3,7 @@
 }
 
 <h2>Country: @Model.Country</h2>
-<h2>Make: @Model.Make</h2>
-<h2>Model: @Model.Model</h2>
+<h2>Make: @Model.Make Model: @Model.Model <a href="/machines/edit/@Model.MachineId">✏️</a></h2>
 
 <h3>Required licenses: </h3>
 
