you can now delete an engineer using jQuery to confirm deletion

--- a/Factory/Views/Engineers/Index.cshtml
+++ b/Factory/Views/Engineers/Index.cshtml
@@ -16,6 +16,7 @@
                 @engineer.Name
                 <a href="/engineers/details/@engineer.EngineerId">🔎</a>
                 <a href="/engineers/edit/@engineer.EngineerId">✏️</a>
+                <a href="#" data-id="@engineer.EngineerId" class="delete-link">❌</a>
             </li>
     }
 </ul>
