--- a/Factory/Views/Machines/Details.cshtml
+++ b/Factory/Views/Machines/Details.cshtml
@@ -2,8 +2,13 @@
     ViewData["Title"] = $"{@Model.Make} {@Model.Model} Details";
 }
 
-<h2>Country: @Model.Country</h2>
-<h2>Make: @Model.Make Model: @Model.Model <a href="/machines/edit/@Model.MachineId">✏️</a></h2>
+
+<h1>
+    @Model.Make • @Model.Model 
+    <a href="/machines/edit/@Model.MachineId">✏️</a>
+    <a href="#" data-id="@Model.MachineId" data-url="/machines/delete/@Model.MachineId" class="delete-link">❌</a>
+</h1>
+<h3>Country: @Model.Country</h3>
 
 <h3>Required licenses: </h3>
 
