--- a/Factory/Views/Machines/Index.cshtml
+++ b/Factory/Views/Machines/Index.cshtml
@@ -16,6 +16,7 @@
                 @machine.Make @machine.Model
                 <a href="/machines/details/@machine.MachineId">🔎</a>
                 <a href="/machines/edit/@machine.MachineId">✏️</a>
+                <a href="#" data-id="@machine.MachineId" data-url="/machines/delete/@machine.MachineId" class="delete-link">❌</a>
             </li>
     }
 </ul>
