home page shows lists of all engineers and machines

--- a/Factory/Views/Engineers/Details.cshtml
+++ b/Factory/Views/Engineers/Details.cshtml
@@ -5,6 +5,7 @@
 <h1>
     Details for @Model.Name 
     <a href="/engineers/edit/@Model.EngineerId">✏️</a>
+    <a href="#" data-id="@Model.EngineerId" data-url="/engineers/delete/@Model.EngineerId" class="delete-link">❌</a>
 </h1>
 
 <h3>Licenses: </h3>
