--- a/Factory/Views/Engineers/Index.cshtml
+++ b/Factory/Views/Engineers/Index.cshtml
@@ -16,7 +16,7 @@
                 @engineer.Name
                 <a href="/engineers/details/@engineer.EngineerId">🔎</a>
                 <a href="/engineers/edit/@engineer.EngineerId">✏️</a>
-                <a href="#" data-id="@engineer.EngineerId" class="delete-link">❌</a>
+                <a href="#" data-id="@engineer.EngineerId" data-url="/engineers/delete/@engineer.EngineerId" class="delete-link">❌</a>
             </li>
     }
 </ul>
