small changes to _Layout and home page

--- a/Factory/Views/Home/Index.cshtml
+++ b/Factory/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to Factory</h1>
+    <h1 class="display-4">Welcome to Dr. Sillystringz</h1>
 </div>
 
 <div class="lists-container">
