--- a/Factory/Views/Shared/_Layout.cshtml
+++ b/Factory/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - Dr. Sillystringz's Factory - Designed by <a href="www.linkedin.com/in/austinpapritz">Austin Papritz</a> 
+            &copy; 2023 - Dr. Sillystringz's Factory - Designed by <a href="https://www.linkedin.com/in/austinpapritz">Austin Papritz</a> 
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
