you can create a new license

--- a/Factory/Views/Shared/_Layout.cshtml
+++ b/Factory/Views/Shared/_Layout.cshtml
@@ -23,16 +23,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Engineers" asp-action="Index">Engineers</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Engineers" asp-action="Create">New Engineer</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Machines" asp-action="Index">Machines</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Machines" asp-action="Create">New Machine</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Machines" asp-action="Create">New Machine</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Licenses" asp-action="Create">New License</a>
                         </li>
                     </ul>
                 </div>
