--- a/Factory/Views/Machines/Index.cshtml
+++ b/Factory/Views/Machines/Index.cshtml
@@ -13,7 +13,7 @@
     @foreach (Machine machine in Model)
     {
 			<li>
-                @machine.Make @machine.Model
+                @machine.MakeModel
                 <a href="/machines/details/@machine.MachineId">🔎</a>
                 <a href="/machines/edit/@machine.MachineId">✏️</a>
                 <a href="#" data-id="@machine.MachineId" data-url="/machines/delete/@machine.MachineId" class="delete-link">❌</a>
